--- a/docs/_posts/2025-08-11-乔乔去哪儿？.md
+++ b/docs/_posts/2025-08-11-乔乔去哪儿？.md
@@ -5,4 +5,4 @@ description: "乔乔去哪儿?"
 date: 2025-08-11
 ---
 
-![img.png](img.png)
+![img.png](https://raw.githubusercontent.com/Macorai/Drawing_board/main/PicGo/img.png)
