--- a/docs/_posts/2025-08-11-乔乔去哪儿？.md
+++ b/docs/_posts/2025-08-11-乔乔去哪儿？.md
@@ -5,5 +5,5 @@ description: "乔乔去哪儿?"
 date: 2025-08-11
 ---
 
-![摘星星](https://raw.githubusercontent.com/Macorai/Drawing_board/main/PicGo/img.png)
-![相思成疾](https://raw.githubusercontent.com/Macorai/Drawing_board/main/PicGo/20250811212424632.png)
+![摘星星✨](https://raw.githubusercontent.com/Macorai/Drawing_board/main/PicGo/img.png)
+![相思成疾🦠](https://raw.githubusercontent.com/Macorai/Drawing_board/main/PicGo/20250811212424632.png)
